# DeltaForge

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  Spec.md
.github/workflows/: ci.yml
docs/: authoring-packs.md  benchmark-format.md  commands.md  config.md  content-style.md  curriculum-map.md  pack-format.md  quickstart.md  safety.md  test-format.md
docs/product/: README.md  architecture.md  experience.md  phase-1-checkpoint.md  phase-1-observation-protocol.md  phase-1-release-audit.md  phase-1-vertical-slice.md  vision.md  visual-direction.md
handoffs/: 00-current-state.md  00-shared-context.md  01-benchmark-engine-v2.md  01-benchmark-engine-v2.subtasks.md  02-performance-gates.md  03-flashindex-performance-stages.md  04-content-depth-pass.md  05-report-portfolio-quality.md  06-optimization-quests.md  07-mcp-read-tools.md  08-design-reflection-loop.md  09-second-language-go.md  10-interview-mode.md  README.md
packs/byteforgevm/: README.md  project.yaml
packs/flashindex/: README.md  project.yaml
packs/minikv/: README.md  project.yaml
packs/tinyhttp/: README.md  project.yaml
src/: application.rs  authoring.rs  capability.rs  cli.rs  config.rs  context.rs  fs_util.rs  integrity.rs  learning_web.rs  lib.rs  main.rs  pack.rs  process.rs  run_journal.rs  run_lease.rs  runner.rs  state.rs  terminal.rs  test_web.rs  viewer.rs  web_theme.rs  workbench.rs
src/commands/: bench.rs  commit.rs  config.rs  (+18 more)
tests/: cli_flow.rs  mcp_standard_client.rs  phase1_failure_corpus.rs  workbench_flow.rs
tools/: gen_flashindex_bench_fixture.py
(+557 files in other folders)
