[package]
name = "deltaforge"
version = "0.1.0"
edition = "2024"
default-run = "deltaforge"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
include_dir = "0.7"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
time = { version = "0.3", features = ["formatting", "parsing"] }
toml = "0.8"

[dev-dependencies]
rmcp = { version = "2.2", default-features = false, features = ["client", "transport-child-process"] }
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
